[gd_scene load_steps=2 format=3 uid="uid://ee80mjaq7enm"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_pause_menu"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_pause_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "JOGO PAUSADO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "‚ñ∂Ô∏è Continuar Jogo"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "üè† Voltar ao Menu"
